--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Memorizar Verbos Irregulares</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
+<div class="footer">
+  <footer class="layout-footer">
+    <span>Feito com &#10084;&#65039; por</span>
+    <span style="margin-left: 4px;"><a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Osvaldo
+        Ramos</a></span>
+  </footer>
+</div>
+
 </html>
