alteracoes de layout e modal de configuracoes

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <div class="footer">
   <footer class="layout-footer">
     <span>Feito com &#10084;&#65039; por</span>
-    <span style="margin-left: 4px;"><a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Osvaldo
+    <span style="margin-left: 4px;"><a href="https://www.instagram.com/ov_ramoss/" target="_blank" rel="noopener"> Osvaldo
         Ramos</a></span>
   </footer>
 </div>
