--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="styles.css" />
+
+  <meta name="description" content="É um site para ajudá-lo a memorizar os verbos irregulares em INGLÊS.">
+	<meta name="keywords" content="verbos irregulares, ingles, inglês, verbos irregulares inglês, memorizar verbos irregulares, verbos">
+	<meta name="author" content="Osvaldo Ramos">
+	<link rel="canonical" href="https://verbosirregulares.com.br/">
 </head>
 
 <body>
